# PlonkTracker

./: .gitignore  PlonkTracker.user.js  README.md  lib.js  package-lock.json
api/: Cargo.toml
api/src/: main.rs  new_middleware.rs
api/src/postgres/: app_state.rs  mod.rs
api/src/routes/: globals.rs  guess.rs  health.rs  mod.rs  root.rs  round.rs  verify.rs
web/: bun.lockb  package-lock.json  package.json
web/src/components/: Dashboard.svelte  Loading.svelte  Login.svelte
web/src/lib/: client.ts  constants.ts
web/src/routes/: +page.svelte
web/src/routes/auth/callback/: +server.js
web/src/routes/home/: +page.server.ts  +page.svelte  +server.js
web/src/routes/stats/: +page.svelte
web/src/stores/: sessionStore.ts
