[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
dotenvy = "0.15.7"
serde = "1.0.216"
serde_json = "1.0"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
