[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
chrono = "0.4.39"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-native-tls", "uuid"] }
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["cors"] }
tower = "0.5.2"
uuid = "1.10.0"
